# libfsp

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  code_scanning.yml  codeql.yml
.github/workflows/windows-vcpkg/: action.yml
dependencies/: CMakeLists.txt
dependencies/cereal/: CMakeLists.txt
include/FileShare/: Client.hpp  Config.hpp  Error.hpp  FileMapping.hpp  MessageQueue.hpp  Server.hpp  TransferHandler.hpp  Version.hpp.in
include/FileShare/Config/: Config.hpp  FileMapping.hpp  KnownPeerStore.hpp  Serialization.hpp  ServerConfig.hpp
include/FileShare/Errors/: TransferErrors.hpp
include/FileShare/Peer/: Peer.hpp  PeerBase.hpp  PreAuthPeer.hpp
include/FileShare/Protocol/: Definitions.hpp  Protocol.hpp  RequestData.hpp  Version.hpp
include/FileShare/Protocol/Handler/v0.0.0/: ProtocolHandler.hpp
include/FileShare/Utils/: DebugPerf.hpp  FileDescriptor.hpp  FileHash.hpp  Path.hpp  Poll.hpp  Serialize.hpp  StringHash.hpp  Strings.hpp  Time.hpp  VarInt.hpp  Vector.hpp
include/FileShareProtocol/: Client.hpp  ClientConfig.hpp  Config.hpp  Definitions.hpp  Protocol.hpp  Server.hpp  Version.hpp.in
include/Utils/: Path.hpp
source/: Client.cpp  ClientConfig.cpp  Client_private.cpp  Config.cpp  MessageQueue.cpp  Protocol.cpp  Server.cpp  TransferHandler.cpp
source/Config/: Config.cpp  FileMapping.cpp  KnownPeerStore.cpp  ServerConfig.cpp
source/Errors/: TransferErrors.cpp
source/Peer/: Peer.cpp  PeerBase.cpp  Peer_private.cpp  PreAuthPeer.cpp
source/Protocol/: Protocol.cpp  RequestData.cpp  Version.cpp
source/Protocol/Handler/: IProtocolHandler.cpp
source/Protocol/Handler/v0.0.0/: ProtocolHandler.cpp
source/Utils/: DebugPerf.cpp  FileDescriptor.cpp  FileHash.cpp  Path.cpp  Poll.cpp  Serialize.cpp  VarInt.cpp
tests/: CMakeLists.txt
tests/Config/: TestFileMapping.cpp
tests/Protocol/: TestVersion.cpp
tests/Utils/: TestFileHash.cpp  TestSerialize.cpp  TestVarInt.cpp
